# kevin_metatron

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf  package-lock.json  package.json  wallet_bot.py
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_platform_profiles_calls_intros.sql  0003_oauth_accounts.sql  0004_pro_tier.sql  0005_kevin_memory.sql  0007_subscriptions.sql  0008_ipfs_visibility.sql  0009_2fa.sql  0010_user_names.sql  0011_role_profiles.sql  0012_subscription_invoices.sql  0013_paystack_subscription.sql  0014_password_reset.sql  0015_investor_matches.sql  0016_kevin_usage.sql  0017_kevin_text_memories.sql  0018_telegram_link_tokens 2.sql  0020_prospects 2.sql  0021_whatsapp.sql  0022_user_suspended.sql  0023_prospect_signed_up_status.sql  0024_super_admin.sql  0025_prospect_pitch_deck.sql  0026_pitch_expanded.sql  0027_pitch_team.sql  0028_profile_deck_expiry.sql  0029_profile_context_cid 2.sql  0030_kevin_chat_turns 2.sql  0031_kevin_chat_session.sql  0032_connector_network.sql  0033_connector_network_staging.sql  0034_connector_ipfs_tiers.sql  0036_connector_enrichment_counter.sql  0038_connector_network_enriched_fields.sql  0039_backfill_network_contact_fields.sql  0040_staging_updated_at.sql  0042_dedup_network_contacts.sql  0043_network_contacts_unique_name.sql  0044_network_contacts_archived.sql  0045_connector_credits.sql  (+11 more)
backend/src/: ai.rs  app.rs  auth.rs  claude.rs  cleanup.rs  compliance.rs  crypto.rs  email.rs  identity.rs  ipfs_snapshot.rs  main.rs  memory.rs  settings.rs  state.rs
backend/src/routes/: admin.rs  angel_score.rs  auth.rs  calls.rs  commerce.rs  compliance.rs  connections.rs  connector_profile.rs  deals.rs  introductions.rs  investment_memos.rs  investments.rs  investor_pipeline.rs  investor_profile.rs  kevin.rs  kevin_matches.rs  matches.rs  messages.rs  mod.rs  oauth.rs  onboarding.rs  pitches.rs  pools.rs  profile.rs  subscription_finalize.rs  subscriptions.rs  uploads.rs  whatsapp.rs
frontend/: package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/app/: globals.css  home-client.tsx  layout.tsx  page.tsx
frontend/components/: AngelScoreCard.tsx  AppShell.tsx  ClientWalletProvider.tsx  ConnectorShell.tsx  ConnectorUpgradeGate.tsx  (+11 more)
scripts/: import_kvm2.py  make_patch.py  wallet_bot.py
solana/: README.md
(+143 files in other folders)
