[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "multipart"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
tokio = { version = "1.40", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
pgvector = { version = "0.4", features = ["sqlx"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
mime_guess = "2.0"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
anyhow = "1"
dotenvy = "0.15"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
